# project-0

./: .bazelrc  .gitconfig  .gitignore  BUILD  BUILD.r  MODULE.bazel  README.md  WORKSPACE  main.py  model.py  post_training_rl.py  post_training_sft.py  pre_training.py  versioned_model_configs.py
checkpoints/25_10_15_pt_sft1/tensorboard/2025-10-15_21-26-38/: events.out.tfevents.1760563598.instance-20251011-154438.15201.0
checkpoints/25_10_15_pt_sft1/tensorboard/2025-10-15_21-44-08/: events.out.tfevents.1760564648.instance-20251011-154438.21430.0
checkpoints/25_10_15_pt_sft1/tensorboard/2025-10-15_21-45-45/: events.out.tfevents.1760564745.instance-20251011-154438.22009.0
checkpoints/25_10_15_pt_sft1/tensorboard/2025-10-15_21-47-00/: events.out.tfevents.1760564820.instance-20251011-154438.22459.0
checkpoints/25_10_15_pt_sft1/tensorboard/2025-10-15_21-49-24/: events.out.tfevents.1760564964.instance-20251011-154438.23294.0
checkpoints/25_10_15_pt_sft1/tensorboard/2025-10-15_21-55-33/: events.out.tfevents.1760565333.instance-20251011-154438.25431.0
dataset/: data_loader.py  load_datasets.py  wikipedia_dataset_utils.py
dataset/post_training/rl/: data_loader.py  download_dataset.py  download_dataset_utils.py  download_openassistant_dataset.py
dataset/post_training/sft/: data_loader.py  download_dataset.py
dataset/pre_training/: data_loader.py  download_all_datasets.py  download_dataset_utils.py  download_institutional_books_dataset.py  download_thepilev2.py  download_tinystories_dataset.py  download_wikitext_dataset.py
simple_transformer/: __init__.py
tokenizer/: convert_sentencepiece_to_hf.py  count_tokenized_data.py  inspect_tokenized_data.py  prepare_sentencepiece_corpus.py  profiles.py  tokenize_dataset.py  train.py  train_sentencepiece.py  train_tokenizer.py  train_tokenizer_configurations.py  utils.py
transformer/: model.py  model_test.py  model_utils.py  tensorboard_utils.py
(+4 files in other folders)
